fix: close host quality gate gaps